--- a/HTML/assets/less/module.less
+++ b/HTML/assets/less/module.less
@@ -1,3 +1,7 @@
+input#duration{
+	max-width: 150px;
+}
+
 #myCanvas-miki{
 
 	.cbp_tmlabel{
